--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       crossorigin="anonymous"
     />
     <!-- <link rel="stylesheet" href="./index.css" /> -->
-  </head>
+  <script defer src="/To-Do-List/main.js"></script></head>
   <body>
     <main>
       <section class="create-todo">
